Name, email added to report list response
